--- a/main/index.html
+++ b/main/index.html
@@ -40,6 +40,8 @@
           <li><button class="drop-menu__link" href="#0">Button</button></li>
           <li><button class="btn" href="#0">Button without drop-menu__link</button></li>
           <li><button class="btn width-100%" href="#0">Button width-100</button></li>
+          <li><button class="drop-menu__btn">drop-menu__btn</button></li>
+          <li><button class="reset drop-menu__btn">reset drop-menu__btn</button></li>
 
 
 
